some issues with ng-show, ng-hide, ng-if - the class ng-hide is still visible although the value of ng-show html tag  property is changing on click

--- a/confusion/app/styles/mystyles.css
+++ b/confusion/app/styles/mystyles.css
@@ -125,10 +125,6 @@ blockquote>q {
   line-height: 150%;
 }
 
-#comments {
-  display: none;
-}
-
-#comments:hover, #comments:active, #comments:focus {
+.comments:hover, .comments:active, .comments:focus {
   text-decoration: none;
 }
